// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders successfully 1`] = `
<StyledComponent
  captionMarginTop="0.27rem"
  forwardedComponent={
    Object {
      "$$typeof": Symbol(react.forward_ref),
      "attrs": Array [],
      "componentStyle": ComponentStyle {
        "componentId": "sc-bdVaJa",
        "isStatic": false,
        "rules": Array [
          "
  text-align: center;
  font-weight: 700;
  font-size: 85%;
  margin-top: ",
          [Function],
          ";
",
        ],
      },
      "defaultProps": Object {
        "captionMarginTop": "0.27rem",
      },
      "displayName": "styled.p",
      "foldedComponentIds": Array [],
      "propTypes": Object {
        "captionMarginTop": [Function],
      },
      "render": [Function],
      "styledComponentId": "sc-bdVaJa",
      "target": "p",
      "toString": [Function],
      "warnTooManyClasses": [Function],
      "withComponent": [Function],
    }
  }
  forwardedRef={null}
/>
`;

exports[`renders text when passed in successfully 1`] = `
<StyledComponent
  captionMarginTop="0.27rem"
  forwardedComponent={
    Object {
      "$$typeof": Symbol(react.forward_ref),
      "attrs": Array [],
      "componentStyle": ComponentStyle {
        "componentId": "sc-bdVaJa",
        "isStatic": false,
        "rules": Array [
          "
  text-align: center;
  font-weight: 700;
  font-size: 85%;
  margin-top: ",
          [Function],
          ";
",
        ],
      },
      "defaultProps": Object {
        "captionMarginTop": "0.27rem",
      },
      "displayName": "styled.p",
      "foldedComponentIds": Array [],
      "propTypes": Object {
        "captionMarginTop": [Function],
      },
      "render": [Function],
      "styledComponentId": "sc-bdVaJa",
      "target": "p",
      "toString": [Function],
      "warnTooManyClasses": [Function],
      "withComponent": [Function],
    }
  }
  forwardedRef={null}
>
  Here's a caption lolz
</StyledComponent>
`;
